add redis cache and delayqueue

--- a/_drafts/redis/2020-01-20-Redis系列(十三)应用之分布式锁.md
+++ b/_drafts/redis/2020-01-20-Redis系列(十三)应用之分布式锁.md
@@ -1,49 +1,61 @@
 ---
 layout: post
-category: [Redis]
+category: [Redis,分布式锁]
 tags:
   - Redis
+  - 分布式锁
 ---
 
+有 Redis 的面试恐怕没有不问分布式锁的吧。..
 
-## 前言
+分布式锁有着多种多样的实现方式，今天就来介绍一下 如何用 Redis 实现一个分布式锁。
 
-有Redis的面试恐怕没有不问分布式锁的吧...
+## 目录
 
-分布式锁有着多种多样的实现方式,今天就来介绍一下 如何用Redis实现一个分布式锁.
+- [定义](#定义)
+- [实现思路](#实现思路)
+- [Java 实现代码](#java-实现代码)
+- [Redisson 的分布式锁实现](#redisson-的分布式锁实现)
+    - [org.redisson.RedissonLock#lock() 方法](#orgredissonredissonlocklock-方法)
+    - [org.redisson.RedissonLock#unlock() 方法](#orgredissonredissonlockunlock-方法)
+- [RedLock](#redlock)
+- [总结](#总结)
+- [参考文章](#参考文章)
+- [联系我](#联系我)
+
 
 ## 定义
 
-首先, 什么是分布式锁呢? 先上维基百科的定义:
+首先，什么是分布式锁呢？先上维基百科的定义：
 
 > 分布式锁，是控制分布式系统之间同步访问共享资源的一种方式。在分布式系统中，常常需要协调他们的动作。如果不同的系统或是同一个系统的不同主机之间共享了一个或一组资源，那么访问这些资源的时候，往往需要互斥来防止彼此干扰来保证一致性，在这种情况下，便需要使用到分布式锁。
 
-通俗的理解就是, 在本地应用中, 当我们多个线程需要并发的访问某一个资源时, 我们直接使用本地的锁, 比如Java的synchronized和ReentrantLock.
+通俗的理解就是，在本地应用中，当我们多个线程需要并发的访问某一个资源时，我们直接使用本地的锁，比如 Java 的 synchronized 和 ReentrantLock.
 
-但是当我们的系统是分布式系统, 竞争资源的是不同进程里的不同线程, 本地锁就没有用了. 此时就需要分布式锁.
+但是当我们的系统是分布式系统，竞争资源的是不同进程里的不同线程，本地锁就没有用了。此时就需要分布式锁。
 
-举个简单的例子, 你有一个程序, 需要在某天中午进行抽奖, 从所有符合条件的用户中随机挑选出10个人, 将他们的ID记录到MySQL中去. 这很好实现. 但是如果你的服务在线上部署了多个实例, 那么他们每一个实例都会运行这段代码, 每个实例会随机挑出10个人, 这明显是不符合需求的. 
+举个简单的例子，你有一个程序，需要在某天中午进行抽奖，从所有符合条件的用户中随机挑选出 10 个人，将他们的 ID 记录到 MySQL 中去。这很好实现。但是如果你的服务在线上部署了多个实例，那么他们每一个实例都会运行这段代码，每个实例会随机挑出 10 个人，这明显是不符合需求的。
 
-此时就应该使用分布式锁, 让所有的实例竞争, 只有一个实例可以成功拿到锁, 然后进行抽奖操作即可.
+此时就应该使用分布式锁，让所有的实例竞争，只有一个实例可以成功拿到锁，然后进行抽奖操作即可。
 
-分布式锁的实现各种各样, 用MySQL, Redis, zookeeper等等都可以实现, 本文介绍一下如何使用Redis来实现一个分布式锁.
+分布式锁的实现各种各样，用 MySQL, Redis, zookeeper 等等都可以实现，本文介绍一下如何使用 Redis 来实现一个分布式锁。
 
-后文举例时都以抽奖为例.
+后文举例时都以抽奖为例。
 
 ## 实现思路
 
 **简单思路**
 
-首先, 我们理解了分布式锁只是要在 `一个独立于分布式系统的地方树立标志`, 然后保证这个标志就有一个人可以用即可.
+首先，我们理解了分布式锁只是要在 `一个独立于分布式系统的地方树立标志`, 然后保证这个标志就有一个人可以用即可。
 
-那么直接在Redis中设置一个字符串即可.比如我们可以设置 `lock_key`就是代表我们的分布式锁.
+那么直接在 Redis 中设置一个字符串即可。比如我们可以设置 `lock_key`就是代表我们的分布式锁。
 
-当需要获取锁时, 首先调用`exists` 命令判断该key是否存在.
+当需要获取锁时，首先调用`exists` 命令判断该 key 是否存在。
 
-* 存在, 说明有其他进程获取了锁, 当前进程放弃或者重试. 在抽奖场景下, 当前进程直接放弃就好.
-* 不存在. 调用`set`命令, 随便写入一个值, 代表自己获取到了锁, 然后进行业务操作, 在完成业务操作之后, 调用`del`命令删除掉该key.
+* 存在，说明有其他进程获取了锁，当前进程放弃或者重试。在抽奖场景下，当前进程直接放弃就好。
+* 不存在。调用`set`命令，随便写入一个值，代表自己获取到了锁，然后进行业务操作，在完成业务操作之后，调用`del`命令删除掉该 key.
 
-看起来很简单,几行代码就写完了. 伪代码总结如下:
+看起来很简单，几行代码就写完了。伪代码总结如下：
 
 ```shell
 # 获取锁
@@ -57,22 +69,21 @@ if false:
 del lock_key
 ```
 
-但是这样做是有极大的缺陷的,如果在生产环境这么操作, 那么应该会 <font color="red">死的很惨</font>. 我们一步一步梳理.
+但是这样做是有极大的缺陷的，如果在生产环境这么操作，那么应该会 <font color="red">死的很惨</font>. 我们一步一步梳理。
 
 **原子性**
 
-获取锁需要两个步骤, 也就是判断锁是否存在以及实际的获取锁. 这两个步骤是单独的两个命令, 并不能保证原子性.
+获取锁需要两个步骤，也就是判断锁是否存在以及实际的获取锁。这两个步骤是单独的两个命令，并不能保证原子性。
 
- 假设进程A在判断lock是否存在之后, 线程B又对他进行了操作. 然后线程A再来继续进行操作, 这样明显是错误的, 可能造成重复加锁,或者锁状态判断错误.
+ 假设进程 A 在判断 lock 是否存在之后，线程 B 又对他进行了操作。然后线程 A 再来继续进行操作，这样明显是错误的，可能造成重复加锁，或者锁状态判断错误。
 
- 幸好Redis提供了`setnx`指令, 可以先解决这个问题.
+ 幸好 Redis 提供了`setnx`指令，可以先解决这个问题。
 
- `setnx key value`, 是`set if not exists`的意思, 如果当前key存在, 则不作任何操作并且返回0, 如果当前key不存在, 则进行set操作, 并且返回1.
+ `setnx key value`, 是`set if not exists`的意思，如果当前 key 存在，则不作任何操作并且返回 0, 如果当前 key 不存在，则进行 set 操作，并且返回 1.
 
  ![2020-01-18-22-04-00](http://img.couplecoders.tech/2020-01-18-22-04-00.png)
 
- 那么此时的分布式锁流程是:
-
+ 那么此时的分布式锁流程是：
 
 ```shell
 # 获取锁
@@ -80,7 +91,7 @@ setnx key value
 if 0:
     放弃
 if 1:
-    成功,做业务操作
+    成功，做业务操作
 
 # 释放锁
 del lock_key
@@ -88,11 +99,11 @@ del lock_key
 
 **服务宕机**
 
-下一个问题来了, 如果进程A在获取到了锁之后, 挂掉了, 也就是做不了释放锁的操作了. 那么这个锁永远的被线程A占用了, 其他任何的进程都拿不到了, 也就是造成了死锁问题. 这可是真*死锁*, 死的透透的.
+下一个问题来了，如果进程 A 在获取到了锁之后，挂掉了，也就是做不了释放锁的操作了。那么这个锁永远的被线程 A 占用了，其他任何的进程都拿不到了，也就是造成了死锁问题。这可是真*死锁*, 死的透透的。
 
-解决方式是给key设置一个过期时间, 不管怎么样, 在过了这段时间, 自动删除key, 也就是释放了锁.
+解决方式是给 key 设置一个过期时间，不管怎么样，在过了这段时间，自动删除 key, 也就是释放了锁。
 
-此时分布式锁的流程是:
+此时分布式锁的流程是：
 
 ```shell
 # 获取锁
@@ -100,44 +111,42 @@ setnx lock_key 1
 if 0:
     放弃
 if 1:
-    # 加个10s的过期时间
+    # 加个 10s 的过期时间
     expire lock_key 10
-    成功,做业务操作
+    成功，做业务操作
 
 # 释放锁
 del lock_key
 ```
 
-我们加了10s的过期时间, 业务操作必须在10s内完成并且释放锁, 否则到了10s立即释放锁, 让别人用.
+我们加了 10s 的过期时间，业务操作必须在 10s 内完成并且释放锁，否则到了 10s 立即释放锁，让别人用。
 
 **又是原子性**
 
-可以发现, 获取锁的过程又变成了两个命令, 又不能保证原子性了, 如果`setnx`之后服务立即宕机, 那么还是不能解决死锁的问题.也就是我们需要把这两个操作变成原子的.
+可以发现，获取锁的过程又变成了两个命令，又不能保证原子性了，如果`setnx`之后服务立即宕机，那么还是不能解决死锁的问题。也就是我们需要把这两个操作变成原子的。
 
-也许你会原子性不是事务最擅长的嘛, 用Redis事务来进行, 但是不行, expire是否执行依赖于setnx执行的结果, 事务里可不提供if/else语句.
+也许你会原子性不是事务最擅长的嘛，用 Redis 事务来进行，但是不行，expire 是否执行依赖于 setnx 执行的结果，事务里可不提供 if/else 语句。
 
-但是Redis提供了Lua脚本机制, 我们可以写个lua脚本发过去, 这样可以保证原子性.
+但是 Redis 提供了 Lua 脚本机制，我们可以写个 lua 脚本发过去，这样可以保证原子性。
 
-当然, 在Redis 2.6.12 之后, Redis作者为`set` 命令提供了 多个可选项, 现在全部的set命令如下:
+当然，在 Redis 2.6.12 之后，Redis 作者为`set` 命令提供了 多个可选项，现在全部的 set 命令如下：
 
 `SET key value [EX seconds|PX milliseconds] [NX|XX] [KEEPTTL]`.
 
-
 * EX seconds -- 秒级的过期时间
 * PX milliseconds -- 毫秒级的过期时间
-* NX -- 相当于setnx.
-* XX -- setex, 只有当key已经存在才写入
-* KEEPTTL -- 保留key的时间. 在6.0 版本才引入的新参数.
+* NX -- 相当于 setnx.
+* XX -- setex, 只有当 key 已经存在才写入
+* KEEPTTL -- 保留 key 的时间。在 6.0 版本才引入的新参数。
 
-有了这个命令之后, 我们的分布式锁流程是:
-
+有了这个命令之后，我们的分布式锁流程是：
 
 ```shell
 # 获取锁
 set lock_key 1 EX 10 NX
 
 if ok:
-    继续, 业务操作
+    继续，业务操作
 if nil:
     放弃
 
@@ -147,15 +156,15 @@ del lock_key
 
 **业务超时误删除**
 
-新的问题到来了, 我们解决死锁的方式是加入一个过期时间, 那么如果我们的业务耗时超过了过期时间怎么办.
+新的问题到来了，我们解决死锁的方式是加入一个过期时间，那么如果我们的业务耗时超过了过期时间怎么办。
 
-假如进程A获取到锁之后, 进行业务操作, 由于卡顿等其他原因, 过了10s还是没有执行结束释放锁,此时锁被自动的释放了. 线程B立刻获取了锁, 进行业务操作. 此时, 如果A线程执行完毕, 进行释放锁操作, 就会将B线程持有的锁误删除.
+假如进程 A 获取到锁之后，进行业务操作，由于卡顿等其他原因，过了 10s 还是没有执行结束释放锁，此时锁被自动的释放了。线程 B 立刻获取了锁，进行业务操作。此时，如果 A 线程执行完毕，进行释放锁操作，就会将 B 线程持有的锁误删除。
 
-为了防止误删除操作, 我们需要 **对个暗号**.
+为了防止误删除操作，我们需要 **对个暗号**.
 
-之前我们在lock_key中设置的一直是一个固定的值, 我们可以将它改为一个随机值, 删除时进行匹配, 匹配正确再进行删除操作. 
+之前我们在 lock_key 中设置的一直是一个固定的值，我们可以将它改为一个随机值，删除时进行匹配，匹配正确再进行删除操作。
 
-也就是:
+也就是：
 
 ```shell
 # 释放锁
@@ -166,7 +175,7 @@ if not equals:
     放弃
 ```
 
-又有原子性问题了. 这个我们可以使用lua脚本来解决.
+又有原子性问题了。这个我们可以使用 lua 脚本来解决。
 
 ```lua 
 if redis.call("get",KEYS[1]) == ARGV[1]
@@ -177,42 +186,41 @@ else
 end
 ```
 
-这样就可以保证原子性了.
+这样就可以保证原子性了。
 
 **业务超时锁已释放**
 
-上面给每把锁加上`加锁方的UUID`之后, 防止了误删除问题, 但是业务超时超过了key的过期时间的问题还是没有解决.
+上面给每把锁加上`加锁方的 UUID`之后，防止了误删除问题，但是业务超时超过了 key 的过期时间的问题还是没有解决。
 
-我个人认为这其实是个悖论. 
+我个人认为这其实是个悖论。
 
-我们想要锁不会被单个线程持续占有, 造成死锁. 才加了锁的过期时间.
+我们想要锁不会被单个线程持续占有，造成死锁。才加了锁的过期时间。
 
-又嫌锁会过期, 业务太慢了还没跑完. 
+又嫌锁会过期，业务太慢了还没跑完。
 
-**让业务跑快点啊, 没有人会永远等你的!**
+**让业务跑快点啊，没有人会永远等你的！**
 
-**我的建议是, 预估业务的最大容忍时间, 把锁设置成相应的时间过期, 到期就自动释放.**
+**我的建议是，预估业务的最大容忍时间，把锁设置成相应的时间过期，到期就自动释放。**
 
-但是还有其他办法来等他, 比如我们在获取到锁之后, 可以启动一个后台线程来定义为此线程的锁 *续命*, 也就是不断的延长过期时间, 直到释放之后才停止续命.
+但是还有其他办法来等他，比如我们在获取到锁之后，可以启动一个后台线程来定义为此线程的锁 *续命*, 也就是不断的延长过期时间，直到释放之后才停止续命。
 
-如果业务无限阻塞, 还是会一直拿着锁, 不然别人用.,,,所以才说是悖论, 我们的优化方向应该是把业务搞快点..
+如果业务无限阻塞，还是会一直拿着锁，不然别人用。,,, 所以才说是悖论，我们的优化方向应该是把业务搞快点。.
 
-当然, 本文后面会给出上面这个解决办法的代码, 虽然我不是特别推荐使用..
+当然，本文后面会给出上面这个解决办法的代码，虽然我不是特别推荐使用。.
 
 **可重入性**
 
-可重入性对于一个锁实现来说比较重要, 像Java中的ReentrantLock就是可重入锁的一个实现.
+可重入性对于一个锁实现来说比较重要，像 Java 中的 ReentrantLock 就是可重入锁的一个实现。
 
-想要实现可重入性, Redis就无能为力了. 因为可重入性必然要继续当前线程的相关信息, 而线程的信息没有办法唯一化的保存在Redis里, 因此我们需要在客户端对Redis的命令进行一些封装.
+想要实现可重入性，Redis 就无能为力了。因为可重入性必然要继续当前线程的相关信息，而线程的信息没有办法唯一化的保存在 Redis 里，因此我们需要在客户端对 Redis 的命令进行一些封装。
 
- 比如在Java中, 我们可以用ThreadLocal来对相当锁进行一个计数, 以此来实现锁的可重入性.后文提供了一个Java版的可重入分布式锁实现.
+ 比如在 Java 中，我们可以用 ThreadLocal 来对相当锁进行一个计数，以此来实现锁的可重入性。后文提供了一个 Java 版的可重入分布式锁实现。
 
+## Java 实现代码
 
-## Java实现代码
+按照上面的思路，我们来实现一个可用的 Redis 分布式锁。使用的三方 Redis 库为：Jedis.
 
-按照上面的思路, 我们来实现一个可用的Redis分布式锁. 使用的三方Redis库为: Jedis.
-
-本来还打算逼逼赖赖一番, 但是写完代码发现自己写了挺多注释的, 各位大佬一看就懂, 这里就不多说了.
+本来还打算逼逼赖赖一番，但是写完代码发现自己写了挺多注释的，各位大佬一看就懂，这里就不多说了。
 
 ```java
 package com.huyan.redis;
@@ -230,33 +238,33 @@ import java.util.concurrent.ScheduledThreadPoolExecutor;
 /**
  * Author: pfliu
  * Date:   2020/01/17.
- * Brief: Redis 实现的 分布式锁.
+ * Brief: Redis 实现的 分布式锁。
  */
 @Slf4j
 public class RedisDistributedLock {
 
     /**
-     * redis 返回值, OK
+     * redis 返回值，OK
      */
     private static final String OK = "OK";
 
     /**
-     * ThreadLocal 统计当前线程获取锁的数量, 可重入
+     * ThreadLocal 统计当前线程获取锁的数量，可重入
      */
     private ThreadLocal<Map<String, Integer>> REFS = new ThreadLocal<>();
 
     /**
-     * 用来跑 定时更新expire的线程池
+     * 用来跑 定时更新 expire 的线程池
      */
     private static final ExecutorService SCHEDULE_POOL = new ScheduledThreadPoolExecutor(10);
 
     /**
-     * 是否要定时更新expire
+     * 是否要定时更新 expire
      */
     private volatile boolean persistentExpireFlag = false;
 
     /**
-     * 更新expire的次数, 可以设定一个最大次数
+     * 更新 expire 的次数，可以设定一个最大次数
      */
     private int persistentExpireTimes = 4;
 
@@ -286,10 +294,10 @@ public class RedisDistributedLock {
     }
 
     /**
-     * 加锁 , 默认加锁10s, 默认不延长持有锁的时间
+     * 加锁 , 默认加锁 10s, 默认不延长持有锁的时间
      *
      * @param key      key
-     * @param curValue 加锁设置的值, 调用方自己生成并保存的UUID即可.
+     * @param curValue 加锁设置的值，调用方自己生成并保存的 UUID 即可。
      * @return 加锁是否成功
      */
     public synchronized boolean lock(String key, String curValue) {
@@ -297,10 +305,10 @@ public class RedisDistributedLock {
     }
 
     /**
-     * 加锁,  默认不延长锁持有时间.
+     * 加锁，默认不延长锁持有时间。
      *
      * @param key      key
-     * @param curValue 加锁设置的值, 调用方自己生成并保存的UUID即可.
+     * @param curValue 加锁设置的值，调用方自己生成并保存的 UUID 即可。
      * @param seconds  加锁的时间
      * @return 是否加锁成功
      */
@@ -309,10 +317,10 @@ public class RedisDistributedLock {
     }
 
     /**
-     * 加锁, 支持重入.
+     * 加锁，支持重入。
      *
      * @param key              key
-     * @param curValue         加锁设置的值, 调用方自己生成并保存的UUID即可.
+     * @param curValue         加锁设置的值，调用方自己生成并保存的 UUID 即可。
      * @param seconds          锁住的时间
      * @param persistentExpire 是否自动延长持有锁的时间
      * @return 是否加锁成功
@@ -320,13 +328,13 @@ public class RedisDistributedLock {
     public synchronized boolean lock(String key, String curValue, int seconds, boolean persistentExpire) {
         Map<String, Integer> countMap = currentRefs();
         Integer count = countMap.get(key);
-        // 已经获得锁的, 不用再操作redis, 直接返回即可.
+        // 已经获得锁的，不用再操作 redis, 直接返回即可。
         if (count != null) {
             countMap.put(key, count + 1);
             return true;
         }
 
-        // 操作redis, 然后在threadlocal记录一下返回
+        // 操作 redis, 然后在 threadlocal 记录一下返回
         boolean ok = this.lock0(key, curValue, seconds);
         if (!ok) return false;
         countMap.put(key, 1);
@@ -338,7 +346,7 @@ public class RedisDistributedLock {
     }
 
     /**
-     * 实际操作加锁操作, 调用Redis的set命令
+     * 实际操作加锁操作，调用 Redis 的 set 命令
      *
      * @param key      key
      * @param curValue value
@@ -356,7 +364,7 @@ public class RedisDistributedLock {
     }
 
     /**
-     * 提交一个异步线程, 延长锁的持有时间
+     * 提交一个异步线程，延长锁的持有时间
      *
      * @param key      key
      * @param curValue value
@@ -406,7 +414,7 @@ public class RedisDistributedLock {
     }
 
     /**
-     * 解锁的实际操作方法, 调用Redis, 使用Lua脚本
+     * 解锁的实际操作方法，调用 Redis, 使用 Lua 脚本
      *
      * @param key      key
      * @param curValue curValue
@@ -423,7 +431,7 @@ public class RedisDistributedLock {
     }
 
     /**
-     * 是否当前的key-value持有的锁.
+     * 是否当前的 key-value 持有的锁。
      * @param key key
      * @param value value
      * @return 是否持有锁
@@ -439,7 +447,7 @@ public class RedisDistributedLock {
     /**
      * 线程持有锁的计数
      *
-     * @return key-count的map
+     * @return key-count 的 map
      */
     private synchronized Map<String, Integer> currentRefs() {
         Map<String, Integer> map = REFS.get();
@@ -453,8 +461,7 @@ public class RedisDistributedLock {
 }
 ```
 
-
-由于我写的是支持多线程进行各自加各自的锁的, 因此内部并不是直接使用Jedis, 而是要持有JedisPool, 那么每次释放都挺麻烦的, 我自己封装了个小工具类, 在上面的代码里面没用,怕混淆视听, 这里放出来供大家把玩, 就几行. 
+由于我写的是支持多线程进行各自加各自的锁的，因此内部并不是直接使用 Jedis, 而是要持有 JedisPool, 那么每次释放都挺麻烦的，我自己封装了个小工具类，在上面的代码里面没用，怕混淆视听，这里放出来供大家把玩，就几行。
 
 RedisUtil:
 
@@ -469,7 +476,7 @@ import redis.clients.jedis.exceptions.JedisConnectionException;
 /**
  * Author: pfliu
  * Date:   2020/01/17.
- * Brief:  redis工具类
+ * Brief:  redis 工具类
  */
 @Slf4j
 public class RedisUtil {
@@ -488,7 +495,7 @@ public class RedisUtil {
     /**
      * 构造方法
      *
-     * @param jedisPool jedis连接池
+     * @param jedisPool jedis 连接池
      */
     public RedisUtil(JedisPool jedisPool) {
         this.jedisPool = jedisPool;
@@ -514,13 +521,13 @@ public class RedisUtil {
 }
 ```
 
-比较简单, 就不多说了.
+比较简单，就不多说了。
 
-对于上面的分布式锁, 我进行了一些必要的测试,主要集中在以下几个方面:
+对于上面的分布式锁，我进行了一些必要的测试，主要集中在以下几个方面：
 
 * 基本的加锁解锁操作
-* 多线程并发加锁(模拟多进程)
-* 锁的可重入性.
+* 多线程并发加锁（模拟多进程）
+* 锁的可重入性。
 
 ```java
 package com.huyan.redis;
@@ -544,17 +551,16 @@ public class RedisDistributedLockTest {
         locker = new RedisDistributedLock(new JedisPool("localhost"));
     }
 
-
     /**
      * 测试基本的加锁解锁功能
      */
     @Test
     public void testBasicLockUnLock() throws InterruptedException {
-        // 当前线程加锁, 应该成功
+        // 当前线程加锁，应该成功
         boolean lock = locker.lock("test_a", "aaa");
         Assert.assertTrue(lock);
 
-        // 新启动了个线程, 加锁解锁都应该失败的
+        // 新启动了个线程，加锁解锁都应该失败的
         Thread other = new Thread(() -> {
             boolean lock1 = locker.lock("test_a", "bbb");
             Assert.assertFalse(lock1);
@@ -565,8 +571,7 @@ public class RedisDistributedLockTest {
         });
         other.start();
 
-
-        // 稍微睡会, 不然比上面的线程快了
+        // 稍微睡会，不然比上面的线程快了
         Thread.sleep(1000);
         // 当前线程解锁应该成功
         boolean b = locker.unLock("test_a", "aaa");
@@ -575,7 +580,7 @@ public class RedisDistributedLockTest {
     }
 
     /**
-     * 测试并发性, 多线程竞争加锁解锁
+     * 测试并发性，多线程竞争加锁解锁
      */
     @Test
     public void testLock() {
@@ -609,29 +614,23 @@ public class RedisDistributedLockTest {
      */
     @Test
     public void testReentrant() {
-        // 同一个线程, 连续加锁4词
-        Assert.assertTrue(locker.lock("lock_key", "test_value"));
-        Assert.assertTrue(locker.lock("lock_key", "test_value"));
-        Assert.assertTrue(locker.lock("lock_key", "test_value"));
+        // 同一个线程，连续加锁 4 词
         Assert.assertTrue(locker.lock("lock_key", "test_value"));
 
-        // 连续解锁4次.
-        Assert.assertTrue(locker.unLock("lock_key", "test_value"));
-        Assert.assertTrue(locker.unLock("lock_key", "test_value"));
-        Assert.assertTrue(locker.unLock("lock_key", "test_value"));
+        // 连续解锁 4 次。
         Assert.assertTrue(locker.unLock("lock_key", "test_value"));
     }
 
 }
 ```
 
-运行以上测试, 就会发现没什么毛病. 顶.
+运行以上测试，就会发现没什么毛病。顶。
 
-## Redisson的分布式锁实现
+## Redisson 的分布式锁实现
 
-自己实现完一个分布式锁之后, 我们已经基本上了解如何用Redis来实现一个分布式锁, 那么来看看业界比较通用的三方库是怎么实现的, 学习一下大佬的思想. 我选择学习一下`Redisson`中的分布式锁, 至于其他的三方库就交给读者去学习了.
+自己实现完一个分布式锁之后，我们已经基本上了解如何用 Redis 来实现一个分布式锁，那么来看看业界比较通用的三方库是怎么实现的，学习一下大佬的思想。我选择学习一下`Redisson`中的分布式锁，至于其他的三方库就交给读者去学习了。
 
-首先来看一下如何使用:
+首先来看一下如何使用：
 
 ```java
     @Test
@@ -641,7 +640,6 @@ public class RedisDistributedLockTest {
         config.useSingleServer()
                 .setAddress("redis://localhost:6379");
         RedissonClient redisson = Redisson.create(config);
-
 
         IntStream.rangeClosed(1, 5)
                 .parallel()
@@ -669,7 +667,7 @@ public class RedisDistributedLockTest {
 
 ```
 
-使用起来很简单, 关键的地方只有三步骤:
+使用起来很简单，关键的地方只有三步骤：
 
 ```java
         RLock lock = redisson.getLock("myLock");
@@ -677,122 +675,108 @@ public class RedisDistributedLockTest {
         lock.unlock();
 ```
 
-那么我们分别来看一下这两个方法的实现.
+那么我们分别来看一下这两个方法的实现。
 
-### org.redisson.RedissonLock#lock()方法
+### org.redisson.RedissonLock#lock() 方法
 
-lock方法的大致流程如下, 内部调用链比较复杂, 其实实现思想都差不多.
+lock 方法的大致流程如下，内部调用链比较复杂，其实实现思想都差不多。
 
 ![2020-01-20-15-33-31](http://img.couplecoders.tech/2020-01-20-15-33-31.png)
 
-其中, **加锁操作**是通过发送给Redis一个lua脚本来执行的. lua脚本的内容如下:
+其中，**加锁操作**是通过发送给 Redis 一个 lua 脚本来执行的。lua 脚本的内容如下：
 
 ![2020-01-20-15-35-30](http://img.couplecoders.tech/2020-01-20-15-35-30.png)
 
-我们对照自己前面的思路, 看看Redisson是如何解决那么多难题的.
+我们对照自己前面的思路，看看 Redisson 是如何解决那么多难题的。
 
 **原子性**
 
-加锁操作只有一个lua脚本, Redis会保证lua脚本的内容的原子性.
+加锁操作只有一个 lua 脚本，Redis 会保证 lua 脚本的内容的原子性。
 
 **超时问题**
 
-redisson在加锁成功之后, 会根据请求加锁的时间, 选择是否需要进行不断的 `延长持有锁的时间`.
+redisson 在加锁成功之后，会根据请求加锁的时间，选择是否需要进行不断的 `延长持有锁的时间`.
 
-* 如果请求加锁时间为-1, 它会启动后台线程, 每隔30s, 查看锁是否释放, 如果没有释放就延长过期时间. 调用的lua脚本如下:
+* 如果请求加锁时间为-1, 它会启动后台线程，每隔 30s, 查看锁是否释放，如果没有释放就延长过期时间。调用的 lua 脚本如下：
 
 ![2020-01-20-15-44-28](http://img.couplecoders.tech/2020-01-20-15-44-28.png)
 
-* 如果请求时间为其他值, 直接加锁那么久就好了.
-
+* 如果请求时间为其他值，直接加锁那么久就好了。
 
 **可重入性**
 
-Redisson解决了这一问题, 在上面的lua脚本中, 如果当前锁存在, 会使用`hexists`命令查看当前锁的持有人与当前请求加锁的是不是同一个客户端, 如果是的话, 调用`hincrby`来将持有锁的数量加1. 以此来实现可重入锁.
+Redisson 解决了这一问题，在上面的 lua 脚本中，如果当前锁存在，会使用`hexists`命令查看当前锁的持有人与当前请求加锁的是不是同一个客户端，如果是的话，调用`hincrby`来将持有锁的数量加 1. 以此来实现可重入锁。
 
 ### org.redisson.RedissonLock#unlock() 方法
 
-解锁方法比较简单, 直接调用lua脚本即可, lua脚本如下:
+解锁方法比较简单，直接调用 lua 脚本即可，lua 脚本如下：
 
 ![2020-01-20-15-50-12](http://img.couplecoders.tech/2020-01-20-15-50-12.png)
 
-可以看到, 脚本中也是有处理可重入锁的相关逻辑的. 
+可以看到，脚本中也是有处理可重入锁的相关逻辑的。
 
-先对持有锁的数量进行减1.
+先对持有锁的数量进行减 1.
 
-之后如果数量为0, 则当前线程释放锁, 删除掉对应的key, 在pubsub中发布解锁的消息.
+之后如果数量为 0, 则当前线程释放锁，删除掉对应的 key, 在 pubsub 中发布解锁的消息。
 
-如果不为0, 则直接返回.
+如果不为 0, 则直接返回。
 
-当然, 在解锁之后, 也要停掉对应的`续命线程`, 不再定时延长持有锁的时间.
-
+当然，在解锁之后，也要停掉对应的`续命线程`, 不再定时延长持有锁的时间。
 
 ## RedLock 
 
-上面我们只提到了, 如果请求加锁的进程过掉了怎么办.
+上面我们只提到了，如果请求加锁的进程过掉了怎么办。
 
-但是 <font color="red">Redis也是会挂掉的, 如果它挂掉了怎么办?</font>.
+但是 <font color="red">Redis 也是会挂掉的，如果它挂掉了怎么办？</font>.
 
-我们没有处理, 这也说明我们上面的分布式锁只能应用于单节点的Redis, 不论是你部署单节点, 或者你自己搞一致性hash, 或者找集群中的固定节点.
+我们没有处理，这也说明我们上面的分布式锁只能应用于单节点的 Redis, 不论是你部署单节点，或者你自己搞一致性 hash, 或者找集群中的固定节点。
 
-总之如果你在一个主从上面用, 当主节点挂掉, 重新选择主节点之后就有可能出错了.
+总之如果你在一个主从上面用，当主节点挂掉，重新选择主节点之后就有可能出错了。
 
-为了解决这个问题, Redis的做Antirez提出了著名的红锁`RedLock`.
+为了解决这个问题，Redis 的做 Antirez 提出了著名的红锁`RedLock`.
 
-它的原理大概是这样子:
+它的原理大概是这样子：
 
-在Redis的分布式环境中，我们假设有N个Redis master。这些节点完全互相独立，不存在主从复制或者其他集群协调机制。我们确保将在N个实例上使用与在Redis单实例下相同方法获取和释放锁。现在我们假设有5个Redis master节点，同时我们需要在5台服务器上面运行这些Redis实例，这样保证他们不会同时都宕掉。
+在 Redis 的分布式环境中，我们假设有 N 个 Redis master。这些节点完全互相独立，不存在主从复制或者其他集群协调机制。我们确保将在 N 个实例上使用与在 Redis 单实例下相同方法获取和释放锁。现在我们假设有 5 个 Redis master 节点，同时我们需要在 5 台服务器上面运行这些 Redis 实例，这样保证他们不会同时都宕掉。
 
-为了取到锁，客户端应该执行以下操作:
+为了取到锁，客户端应该执行以下操作：
 
-* 获取当前Unix时间，以毫秒为单位。
-* 依次尝试从5个实例，使用相同的key和具有唯一性的value（例如UUID）获取锁。当向Redis请求获取锁时，客户端应该设置一个网络连接和响应超时时间，这个超时时间应该小于锁的失效时间。例如你的锁自动失效时间为10秒，则超时时间应该在5-50毫秒之间。这样可以避免服务器端Redis已经挂掉的情况下，客户端还在死死地等待响应结果。如果服务器端没有在规定时间内响应，客户端应该尽快尝试去另外一个Redis实例请求获取锁。
-* 客户端使用当前时间减去开始获取锁时间（步骤1记录的时间）就得到获取锁使用的时间。当且仅当从大多数（N/2+1，这里是3个节点）的Redis节点都取到锁，并且使用的时间小于锁失效时间时，锁才算获取成功。
-* 如果取到了锁，key的真正有效时间等于有效时间减去获取锁所使用的时间（步骤3计算的结果）。
-* 如果因为某些原因，获取锁失败（没有在至少N/2+1个Redis实例取到锁或者取锁时间已经超过了有效时间），客户端应该在所有的Redis实例上进行解锁（即便某些Redis实例根本就没有加锁成功，防止某些节点获取到锁但是客户端没有得到响应而导致接下来的一段时间不能被重新获取锁）。
+* 获取当前 Unix 时间，以毫秒为单位。
+* 依次尝试从 5 个实例，使用相同的 key 和具有唯一性的 value（例如 UUID）获取锁。当向 Redis 请求获取锁时，客户端应该设置一个网络连接和响应超时时间，这个超时时间应该小于锁的失效时间。例如你的锁自动失效时间为 10 秒，则超时时间应该在 5-50 毫秒之间。这样可以避免服务器端 Redis 已经挂掉的情况下，客户端还在死死地等待响应结果。如果服务器端没有在规定时间内响应，客户端应该尽快尝试去另外一个 Redis 实例请求获取锁。
+* 客户端使用当前时间减去开始获取锁时间（步骤 1 记录的时间）就得到获取锁使用的时间。当且仅当从大多数（N/2+1，这里是 3 个节点）的 Redis 节点都取到锁，并且使用的时间小于锁失效时间时，锁才算获取成功。
+* 如果取到了锁，key 的真正有效时间等于有效时间减去获取锁所使用的时间（步骤 3 计算的结果）。
+* 如果因为某些原因，获取锁失败（没有在至少 N/2+1 个 Redis 实例取到锁或者取锁时间已经超过了有效时间），客户端应该在所有的 Redis 实例上进行解锁（即便某些 Redis 实例根本就没有加锁成功，防止某些节点获取到锁但是客户端没有得到响应而导致接下来的一段时间不能被重新获取锁）。
 
-Redisson 对RedLock已经有了良好的实现, 实现类为`org.redisson.RedissonRedLock`, 但是这里不打算去研究它的源码了, 因为这个目前没有必要, 客户端注意一下, 其实我们连可重入锁很多时间都不需要. 手动捂脸.
+Redisson 对 RedLock 已经有了良好的实现，实现类为`org.redisson.RedissonRedLock`, 但是这里不打算去研究它的源码了，因为这个目前没有必要，客户端注意一下，其实我们连可重入锁很多时间都不需要。手动捂脸。
 
-需要或者想要了解的读者们可以下载 [Redisson源码](https://github.com/redisson/redisson) 自行学习.
+需要或者想要了解的读者们可以下载 [Redisson 源码](https://github.com/redisson/redisson) 自行学习。
 
 ## 总结
 
-本文先是简单介绍了一下分布式锁, 之后按照从简单到复杂的思路, 用Redis实现了一个分布式锁, 并一步一步解决了过程中会遇到的问题. 之后, 学习了 Redisson的分布式锁实现的源码, 对其实现原理及思路有了了解. 最后大概介绍了下红锁算法.
+本文先是简单介绍了一下分布式锁，之后按照从简单到复杂的思路，用 Redis 实现了一个分布式锁，并一步一步解决了过程中会遇到的问题。之后，学习了 Redisson 的分布式锁实现的源码，对其实现原理及思路有了了解。最后大概介绍了下红锁算法。
 
-生产环境使用的话还是建议使用三方开源包, 因为毕竟都是大佬们写的, 比较靠谱, 个人实现的可以用来在学习的过程中, 加强对原理的理解.
-
+生产环境使用的话还是建议使用三方开源包，因为毕竟都是大佬们写的，比较靠谱，个人实现的可以用来在学习的过程中，加强对原理的理解。
 
 ## 参考文章
 
-[Redis官网对分布式锁实现的文章](https://redis.io/topics/distlock)
+[Redis 官网对分布式锁实现的文章](https://redis.io/topics/distlock)
 
 <br>
-
 
 完。
 <br>
-<br>
-<br>
-
 
 ## 联系我
 最后，欢迎关注我的个人公众号【 呼延十 】，会不定期更新很多后端工程师的学习笔记。
 也欢迎直接公众号私信或者邮箱联系我，一定知无不言，言无不尽。
 ![](http://img.couplecoders.tech/%E6%89%AB%E7%A0%81_%E6%90%9C%E7%B4%A2%E8%81%94%E5%90%88%E4%BC%A0%E6%92%AD%E6%A0%B7%E5%BC%8F-%E6%A0%87%E5%87%86%E8%89%B2%E7%89%88.png)
 
-
 <br>
-<br>
-
-
 
 **以上皆为个人所思所得，如有错误欢迎评论区指正。**
 
-
 **欢迎转载，烦请署名并保留原文链接。**
-
 
 **联系邮箱：huyanshi2580@gmail.com**
 
-
-**更多学习笔记见个人博客或关注微信公众号 &lt;呼延十 &gt;------><a href="{{ site.baseurl }}/">呼延十</a>**
+**更多学习笔记见个人博客或关注微信公众号 &lt; 呼延十 &gt;------><a href="{{ site.baseurl }}/">呼延十</a>**
