--- a/_posts/开发者手册/设计模式/2020-11-01-[设计模式]-代理模式.md
+++ b/_posts/开发者手册/设计模式/2020-11-01-[设计模式]-代理模式.md
@@ -698,7 +698,9 @@ public class CglibProxy implements MethodInterceptor {
 
 
 
+其实这里本应该有个性能测试，但是由于设计实验太难了，尝试了几次之后获得的结果不稳定，因此我放弃了。
 
+如果需要性能测试可以google其他大佬的数据.
 
 
 <br>
