--- a/_drafts/lucene/2020-12-27-lucene系列(二)索引格式之fdｍ文件.md
+++ b/_drafts/lucene/2020-12-27-lucene系列(二)索引格式之fdｍ文件.md
@@ -1,36 +1,114 @@
- # fdm 文件
+---
+layout: post
+category: [Lucene,搜索]
+tags:
+  - Lucene
+  - 搜索
+---
 
 
- # 这个文件存储了什么？
-
- 存储了一些元信息，具体可以用来干啥，　我不是很确定
+<font color="red">本文使用Lucene代码版本: 8.7.0</font>
 
 
- # 能干什么？
+## 前言
 
-# 具体点的
+首先学习一下lucene的索引文件结构. 本文首先介绍 Field 相关信息的存储文件格式.
 
-
-
- 构造函数中先写一个header.
-
-1. codecHeader: Magic, codec-name,version.
-2. SegmentInfo-ID, 一个唯一的字符串序列，当前segment的唯一标示
-3. Segment-suffix. 传了个空进来。
+当你在写入field信息时,如果像下面这样, 指定了Stored. 也就是希望lucene 能够保存你的原始Field信息,那么就会生成三个文件 **.fdt .fdm .fdx**.
 
 
-之后在构造函数中写了一下
+![2021-01-23-18-00-42](http://img.couplecoders.tech/2021-01-23-18-00-42.png)
 
-1. chunkSize 每个块的大小
-2. PackedInts 这个类有个版本。写进去，是个int
+其中
+- .fdt 文件保存了原始的field信息
+- .fdx 文件保存了一些帮助读取fdt的索引信息
+- .fdm 文件保存了一些基本的元数据,也包括一些辅助读取fdx文件的信息.
+
+本文首先介绍fdm的文件格式, 及学习一下其在Lucene8.7.0中的写入相关代码.
+
+## .fdm文件整体结构
+
+![2021-01-23-18-05-13](http://img.couplecoders.tech/2021-01-23-18-05-13.png)
+
+必须的字段解释:
+
+1.  IndexHeader 索引文件头
+2. ChunSize 每个Chunk中的doc数量
+3. Version 版本号
+4. NumDocs: doc数量的总数
+5. BlockShift: 控制chunk信息写入时的分块, 2 ^ blockShift 为一块.
+6. totalChunks: 总共有多少个chunk
+7. ChunkDocsNumIndex: 存储每个chunk中doc数量的内容, 在fdx文件中的起始偏移位置
+8. ChunksDocsNumMeta: fdx文件中存储Chunk中doc数量, 用到的一些元数据
+    8.1 Min : 通过编码计算的最小值
+    8.2 AvgInc: 通过编码计算的平均斜率
+    8.3: ChunDocsNumIndex: 从开始写入到现在, fdx文件的偏移量
+    8.4 BitRequired: 所有要写入的数字, 最大需要多少位才能存储
+9. ChunkStartIndex: 存储每个chunk数据起始位置的位置
+10. ChunkStartPointMeta: 存储每个chunk数据起始位置的一些元数据
+11. StartPointEndPoint: 存储每个chunk数据起始位置的数据的结束位置.
+12. MaxPoint: fdx的最大写入位置
+13. numDirtyChunks: 脏的chunk的数量
+14. numDirtyDocs: 脏的doc的数量
+15. footer: 索引文件的脚部
 
 
-之后每次写field不会再给这里写了。只有最后finish会写一下.
 
-1. numDocs, 总共有多少doc
-2. blockShift. 暂时没理解
-3. totalChunk, 总共多少块
-4. fdx索引文件的大小, 写了三次，应该是做一些标记，目前没细看呢
-5. 写了最大的文件偏移指针
-6. 脏的chunk和脏的doc的数量
-7. 写了个footer.
+ //构造函数中先写一个header.
+//
+//1. codecHeader: Magic, codec-name,version.
+//2. SegmentInfo-ID, 一个唯一的字符串序列，当前segment的唯一标示
+//3. Segment-suffix. 传了个空进来。
+//
+//
+//之后在构造函数中写了一下
+//
+//1. chunkSize 每个块的大小
+//2. PackedInts 这个类有个版本。写进去，是个int
+//
+//
+//之后每次写field不会再给这里写了。只有最后finish会写一下.
+//
+//1. numDocs, 总共有多少doc
+//2. blockShift. 暂时没理解
+//3. totalChunk, 总共多少块
+//4. fdx索引文件的大小, 写了三次，应该是做一些标记，目前没细看呢
+//5. 写了最大的文件偏移指针
+//6. 脏的chunk和脏的doc的数量
+//7. 写了个footer.
+
+
+## 参考文章
+
+
+<br>
+
+
+完。
+<br>
+<br>
+<br>
+
+
+## 联系我
+最后，欢迎关注我的个人公众号【 呼延十 】，会不定期更新很多后端工程师的学习笔记。
+也欢迎直接公众号私信或者邮箱联系我，一定知无不言，言无不尽。
+![](http://img.couplecoders.tech/%E6%89%AB%E7%A0%81_%E6%90%9C%E7%B4%A2%E8%81%94%E5%90%88%E4%BC%A0%E6%92%AD%E6%A0%B7%E5%BC%8F-%E6%A0%87%E5%87%86%E8%89%B2%E7%89%88.png)
+
+
+<br>
+<br>
+
+
+
+
+**以上皆为个人所思所得，如有错误欢迎评论区指正。**
+
+
+**欢迎转载，烦请署名并保留原文链接。**
+
+
+**联系邮箱：huyanshi2580@gmail.com**
+
+
+**更多学习笔记见个人博客或关注微信公众号 &lt;呼延十 &gt;------><a href="{{ site.baseurl }}/">呼延十</a>**
