variable int & zigzag

--- a/_drafts/lucene/2020-12-27-lucene系列(二)索引格式之fdｍ文件.md
+++ b/_drafts/lucene/2020-12-27-lucene系列(二)索引格式之fdｍ文件.md
@@ -12,7 +12,7 @@ tags:
 
 ## 前言
 
-首先学习一下lucene的索引文件结构. 本文首先介绍 Field 相关信息的存储文件格式.
+首先学习一下lucene的索引文件结构. 本文介绍 Field 相关信息的存储文件格式.
 
 当你在写入field信息时,如果像下面这样, 指定了Stored. 也就是希望lucene 能够保存你的原始Field信息,那么就会生成三个文件 **.fdt .fdm .fdx**.
 
@@ -30,55 +30,127 @@ tags:
 
 ![2021-01-23-18-05-13](http://img.couplecoders.tech/2021-01-23-18-05-13.png)
 
-必须的字段解释:
-
-1.  IndexHeader 索引文件头
-2. ChunSize 每个Chunk中的doc数量
-3. Version 版本号
-4. NumDocs: doc数量的总数
-5. BlockShift: 控制chunk信息写入时的分块, 2 ^ blockShift 为一块.
-6. totalChunks: 总共有多少个chunk
-7. ChunkDocsNumIndex: 存储每个chunk中doc数量的内容, 在fdx文件中的起始偏移位置
-8. ChunksDocsNumMeta: fdx文件中存储Chunk中doc数量, 用到的一些元数据
-    8.1 Min : 通过编码计算的最小值
-    8.2 AvgInc: 通过编码计算的平均斜率
-    8.3: ChunDocsNumIndex: 从开始写入到现在, fdx文件的偏移量
-    8.4 BitRequired: 所有要写入的数字, 最大需要多少位才能存储
-9. ChunkStartIndex: 存储每个chunk数据起始位置的位置
-10. ChunkStartPointMeta: 存储每个chunk数据起始位置的一些元数据
-11. StartPointEndPoint: 存储每个chunk数据起始位置的数据的结束位置.
-12. MaxPoint: fdx的最大写入位置
-13. numDirtyChunks: 脏的chunk的数量
-14. numDirtyDocs: 脏的doc的数量
-15. footer: 索引文件的脚部
 
 
+- IndexHeader 索引文件头
+lucene 对于索引文件,会写一个文件头,来标识一些基本的数据.
 
- //构造函数中先写一个header.
-//
-//1. codecHeader: Magic, codec-name,version.
-//2. SegmentInfo-ID, 一个唯一的字符串序列，当前segment的唯一标示
-//3. Segment-suffix. 传了个空进来。
-//
-//
-//之后在构造函数中写了一下
-//
-//1. chunkSize 每个块的大小
-//2. PackedInts 这个类有个版本。写进去，是个int
-//
-//
-//之后每次写field不会再给这里写了。只有最后finish会写一下.
-//
-//1. numDocs, 总共有多少doc
-//2. blockShift. 暂时没理解
-//3. totalChunk, 总共多少块
-//4. fdx索引文件的大小, 写了三次，应该是做一些标记，目前没细看呢
-//5. 写了最大的文件偏移指针
-//6. 脏的chunk和脏的doc的数量
-//7. 写了个footer.
+![2021-01-23-18-35-00](http://img.couplecoders.tech/2021-01-23-18-35-00.png)
 
+包含:
+    * CodecHeader: 一个编码的Header.
+    * SegmentID: 当前Segment的ID, 随机生成的16位字符串
+    * SegmentSuffix: 当前Segment的后缀
+    * Magic: 一个魔法数字,永远是: 0x3fd76c17.
+    * CodecName: 当前编码的名字, 比如对于当前的fdm文件时: "Lucene85FieldsIndexMeta"
+    * Version: 一个内部的版本号, 不是lucene版本号哦.
+
+- ChunSize 每个Chunk中的doc数量
+- Version 版本号
+- NumDocs: doc数量的总数
+- BlockShift: 控制chunk信息写入时的分块, 2 ^ blockShift 为一块.
+- totalChunks: 总共有多少个chunk
+- ChunkDocsNumIndex: 存储每个chunk中doc数量的内容, 在fdx文件中的起始偏移位置
+- ChunksDocsNumMeta: fdx文件中存储Chunk中doc数量, 用到的一些元数据
+
+![2021-01-23-18-50-51](http://img.couplecoders.tech/2021-01-23-18-50-51.png)
+
+在fdx文件中, 存储每个chunk中的doc数量时, 使用了`DirectMonotonicWriter`类来进行存储, 这个类用来存储单调递增数组,能够进行一些压缩.具体的别的文章中详细说~
+
+为了完成压缩的功能, 需要一些数字进行辅助,就是下面这几位咯.
+
+    - Min : 通过编码计算的最小值
+    - AvgInc: 通过编码计算的平均斜率
+    - ChunDocsNumIndex: 从开始写入到现在, fdx文件的偏移量
+    - BitRequired: 所有要写入的数字, 最大需要多少位才能存储
+
+- ChunkStartIndex: 存储`每个chunk数据起始位置`数据的起始位置
+- ChunkStartPointMeta: 存储每个chunk数据起始位置的一些元数据
+
+在储存`每个chunk的数据在fdx文件中的起始位置`的相关数据时, 和上面的chunk内doc数量一样, 做了一些压缩~
+
+![2021-01-23-18-54-34](http://img.couplecoders.tech/2021-01-23-18-54-34.png)
+
+    - Min : 通过编码计算的最小值
+    - AvgInc: 通过编码计算的平均斜率
+    - ChunDocsNumIndex: 从开始写入到现在, fdx文件的偏移量
+    - BitRequired: 所有要写入的数字, 最大需要多少位才能存储
+
+- StartPointEndPoint: 存储`每个chunk数据起始位置`的数据的结束位置.
+- MaxPoint: fdx的最大写入位置
+- numDirtyChunks: 脏的chunk的数量, 当chunk并没有到达数量,而是强行进行finish,那么相关的chunk和doc就是dirty的. 这两个变量记录了一下相关的数量.
+- numDirtyDocs: 脏的doc的数量
+- footer: 索引文件的脚部
+
+## 知其然知其所以然
+
+每个字段, 每段数据, 是为什么存储, 其实我不太知道. 目前看的代码还不是很多.
+
+但是我们应该知道, 所以我罗列在这里,不知道的后来补上~
+
+数据/字段名 | 内容 | 作用
+--- | --- | ---
+ IndexHeader |  索引文件header | 为了标识一些基础信息,也可以用来做一些文件的验证.
+ ChunSize | 每个chunk包含多少个doc | chunk是固定大小的,在创建时会初始化,因此可以方便的按chunk进行读取,索引等.
+ Version | 内部版本号 | 不知道.
+ NumDocs | 当前文件的总数 | 计数用.
+ BlockShift| 多少chunk的数据进行一个block存储 | 对chunk的数据进行分块存储用
+ totalChunks | 总共有多少个chunk |  计数用.
+ ChunkDocsNumIndex | 存储每个chunk中doc数量的内容, 在fdx文件中的起始偏移位置| 方便读取fdx文件 
+ ChunksDocsNumMeta | fdx文件中存储Chunk中doc数量, 用到的一些元数据 | fdx文件对数据进行压缩,压缩用的一些配合型的数据
+Min |  通过编码计算的最小值 | 记录最小的数字,具体作用在`DirectMonotonicWriter`中详细解释
+AvgInc | 通过编码计算的平均斜率 |    `DirectMonotonicWriter`
+ChunDocsNumIndex| 从开始写入到现在, fdx文件的偏移量 | `DirectMonotonicWriter`
+BitRequired |  所有要写入的数字, 最大需要多少位才能存储 | `DirectMonotonicWriter`
+ChunkStartIndex| 存储每个chunk数据起始位置的位置 | 方便读取fdx文件
+ChunkStartPointMeta |  存储每个chunk数据起始位置的一些元数据 | 同上
+StartPointEndPoint| 存储每个chunk数据起始位置的数据的结束位置 | 同上
+MaxPoint |  fdx的最大写入位置 | 同上
+numDirtyChunks | 脏的chunk的数量 | 不确定
+numDirtyDocs| 脏的doc的数量 | 不确定
+footer| 索引文件的脚部 | 用来表示文件结束,同时里面含有CRC32来check文件数据是否正确.
+
+
+# 相关代码分析
+
+在8.7.0版本, 对Field相关信息的存储在`org.apache.lucene.codecs.compressing.CompressingStoredFieldsWriter`类中. 
+
+首先, 在类构造函数中, 进行了fdm文件的初始化, 之后写入了IndexHeader. 以及`chunkSize`及`Version`.
+
+![2021-01-24-00-12-04](http://img.couplecoders.tech/2021-01-24-00-12-04.png).
+
+之后在程序不断的添加Document过程中, 不再写入fdm文件,在所有Document全部写入之后,会调用`
+org.apache.lucene.codecs.compressing.CompressingStoredFieldsWriter#finish` 方法, 在该方法中, 写入了部分数据.
+
+![2021-01-24-00-14-37](http://img.couplecoders.tech/2021-01-24-00-14-37.png)
+
+如上图所示, 在1处写入了fdm配合fdx文件的一些元数据.
+在2处写入了`numDirtyChunks,numDirtyDocs及Footer`.
+
+
+在1处,配合fdx文件写入了些什么呢?
+
+![2021-01-24-00-19-01](http://img.couplecoders.tech/2021-01-24-00-19-01.png)
+
+在3处, 写入了`numDocs, blockShift, totalChunks, filePoint`等信息. 这些都是顺序的, 和前方的整体格式图一一对应.
+
+比较麻烦的是, 在上图中4处, 在fdx文件存储所有chunk中doc数量时, 应用了`DirectMonotonicWriter` 类来进行存储, 该类的具体实现可以阅读延伸阅读中的文章.
+
+该类大致做了什么呢? 
+
+- 所有chunk的doc数量.
+- 所有chunk具体信息存储的point.
+
+这两个数组都是单调递增的, 因此`DirectMonotonicWriter`类就是专门用来存储单调递增数组的.
+根据单调递增这个因素, 对传入的int数组进行了压缩,压缩中用到了几个参数, 在之后复原数据时需要. 那就是`Min,AvgInc,Offset,BitRequired`. 这里使用了fdm文件来存储这几个参数而已.
+
+# 延伸阅读
+
+`DirectMonotonicWriter`类的原理解析. 具体文章还没写哈哈哈.
 
 ## 参考文章
+
+https://www.amazingkoala.com.cn/Lucene/suoyinwenjian/2020/1013/169.html
 
 
 <br>
