--- a/_drafts/lucene/2020-12-28-lucene源码类的作用记录.md
+++ b/_drafts/lucene/2020-12-28-lucene源码类的作用记录.md
@@ -4,6 +4,6 @@ org.apache.lucene.index.FieldInfo | 描述文档的字段信息
 org.apache.lucene.index.FieldInfos | FieldInfo的集合对象
 org.apache.lucene.index.IndexingChain | 索引链，处理所有field的索引过程
 org.apache.lucene.index.IndexWriterConfig | 配置类
-BytesRed | 用bytes, offset, length　来保存一个字节数据，本质上就是个字节数组
+BytesRed | 用bytes, offset, length　来保存一个字节数组，本质上就是个字节数组
 Document | 文档，是一系列的field合集，之外仅提供了一些get方法，没什么代码
 
